# -Eretik1-tex_programming_lab_5

./: CMakeLists.txt  ~$чет ЛБ 5 Технологии программирования Болбин И.М.docx  Отчет ЛБ 5 Технологии программирования Болбин И.М.docx
include/: electricDrill.h  electricMotor.h  electrodevice.h  heatingElement.h  mylibrary.h
src/: mainwindow.cpp  mainwindow.h
